# growx

./: .gitignore  Cargo.toml  README.md
crates/bot/: Cargo.toml
crates/bot/src/: ai.rs  clix.rs  engine.rs  lib.rs  rate_limiter.rs
crates/bot/src/rules/: auto_reply.rs  follow_dm.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: db.rs  main.rs  state.rs
crates/server/src/api/: config.rs  logs.rs  mod.rs  status.rs
growx-extension/: README.md  manifest.json
growx-extension/background/: sw.js
growx-extension/content/: content.js
growx-extension/popup/: popup.html  popup.js
growx-extension/settings/: settings.html  settings.js
growx-extension/sidepanel/: panel.css  panel.html  panel.js
migrations/: 0001_init.sql  0002_own_handle.sql
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx
web/src/components/: Toggle.tsx
web/src/pages/: AutoReply.tsx  Dashboard.tsx  FollowDM.tsx  Settings.tsx
