[package]
name = "growx-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "growx"
path = "src/main.rs"

[dependencies]
growx-bot = { path = "../bot" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
